@@ -1,9 +1,16 @@
 # -*- Mode: Shell-Script -*-  Not really, but shows comments correctly
-# $Id: ipythonrc 1879 2006-11-04 00:34:34Z fptest $
+# $Id: ipythonrc 1979 2006-12-12 18:50:20Z vivainio $
 
 #***************************************************************************
 #
 # Configuration file for IPython -- ipythonrc format
+#
+# ===========================================================
+# Deprecation note: you should look into modifying ipy_user_conf.py (located 
+# in ~/.ipython or ~/_ipython, depending on your platform) instead, it's a 
+# more flexible and robust (and better supported!) configuration
+# method.
+# ===========================================================
 #
 # The format of this file is simply one of 'key value' lines.
 # Lines containing only whitespace at the beginning and then a # are ignored
