@@ -1,3 +1,13 @@
+2006-12-12  Ville Vainio  <vivainio@gmail.com>
+
+	* ipmaker.py: apply david cournapeau's patch to make
+	import_some work properly even when ipythonrc does 
+	import_some on empty list (it was an old bug!).
+
+	* UserConfig/ipy_user_conf.py, UserConfig/ipythonrc:
+	 Add deprecation note to ipythonrc and a url to wiki
+	 in ipy_user_conf.py
+	
 2006-12-08  Ville Vainio  <vivainio@gmail.com>
 
 	* Extensions/ipy_stock_completers.py.py: fix cd completer 
